kube-apps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: node-kube-apps
  labels:
    name: node-kube-apps
