nodeapp-noport.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nodeapp-deploy
  namespace: node-kube-apps
  labels:
    k8s-app: nodeappk8s
spec:
  replicas: 2
  revisionHistoryLimit: 10
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        k8s-app: nodeappk8s
    spec:
      containers:
        - image: mangseng/nodeappk8s:v1.0.2
          imagePullPolicy: Always
          name: nodeappk8s
